# refsw-offline

./: .gitignore  CMakeLists.txt  README.md  build.sh  deps.sh
kos-dump-renderer/: Makefile  main.c
kos-hostfs-renderer/: Makefile  main.c
kos-romdisk-renderer/: enter-kos-docker.sh  fbdump_to_png.cpp  main.c
scenes/bios-boot/: pvr_regs
scenes/bios-menu/: pvr_regs
src/: Renderer_if.h  TexCache.cpp  TexCache.h  TexCacheEntry.cpp  TexConv.h  TexUtils.cpp  TexUtils.h  build.h  core_structs.h  fixed.h  gles.h  main.cpp  oslib.h  pvr_mem.cpp  pvr_mem.h  pvr_regs.cpp  pvr_regs.h  refrend_base.cpp  refrend_base.h  refsw.cpp  refsw.h  refsw_lists.cpp  refsw_lists.h  refsw_lists_regtypes.h  refsw_pixel.cpp  refsw_pixel.h  refsw_tile.cpp  refsw_tile.h  refsw_tsp_init.inl  stb_image_write.h  types.h
test/: framework.h  framework.inl  includer.inl
test/cases/: 1st_tri.cpp  1st_tri.inl  2nd_tri.cpp  big_tri.cpp  pt_transp.cpp  viewport_limits.inl
tools/: refsw-offline.cpp  refsw-tests.cpp
